[metadata]
name = pyorg-flask
version= attr: pyorg_flask.__version__
description = Flask app for pyorg package.
long_description = file: README.md
author = Jared Lumpe
author_email = mjlumpe@gmail.com
url = https://github.com/jlumpe/pyorg-flask

[options]
python_requires = >=3.5

install_requires  =
	Flask~=1.0

setup_requires =
	pytest-runner

tests_require =
	pytest

dependency_links =
	http://github.com/jlumpe/pyorg/tarball/master#egg=pyorg-0.1

packages = find:

include_package_data = true
zip_safe = false


[options.entry_points]
console_scripts =
	pyorg-flask = pyorg_flask.cli:cli


# Aliases for setuptools commands
[aliases]
test = pytest


# Pytest settings
[tool:pytest]

# Run tests in tests/, obviously
# Also check docstrings in package
testpaths = tests pyorg_flask

# Run doctests on all modules
addopts = --doctest-modules
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL


# Flake8 settings
[flake8]

# Ignore these codes:
ignore =
	# TABS ARE BETTER
	W191,
	# indentation contains mixed spaces and tabs - spaces for alignment
	E101,
	# Blank line at end of file - we require this in .editorconfig
	W391

# Exclude these paths:
exclude = docs

# Check style of doctests (not working?)
doctests = True
